src/objects/Track__c.object
<CustomObject>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Tracks</relationshipLabel>
        <relationshipName>Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Takeaways__c</fullName>
        <label>Key Takeaways</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Publish_to_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be used if you wish to build a web integration that will publish track info on your website.</description>
        <label>Publish to Web?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Track_Category__c</fullName>
        <label>Track Category</label>
        <picklist>
            <picklistValues>
                <fullName>Category #1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category #2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category #3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Track_Description__c</fullName>
        <label>Track Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Track_Status__c</fullName>
        <label>Track Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Leader Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sessions Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft Sessions Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Copy Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editorial Review Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Review Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Publish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Track</label>
    <nameField>
        <label>Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>